syntax = "proto3";

package pos;

option go_package="github.com/Andrewalifb/alpha-pos-system/sales-service";

import "google/protobuf/timestamp.proto";
import "alpha-pos-system/sales-service/api/proto/common.proto"; 

// PosCashDrawer
message PosCashDrawer {
  string drawer_id = 1;
  string store_id = 2;
  string employee_id = 3;
  double cash_in = 4;
  double cash_out = 5;
  google.protobuf.Timestamp transaction_time = 6;
  string role_id = 7;
  string company_id = 8;
  google.protobuf.Timestamp created_at = 9;
  string created_by = 10;
  google.protobuf.Timestamp updated_at = 11;
  string updated_by = 12;
}

// Request and Response messages
message CreatePosCashDrawerRequest {
  PosCashDrawer pos_cash_drawer = 1;
  JWTPayload jwt_payload = 2;
}

message CreatePosCashDrawerResponse {
  PosCashDrawer pos_cash_drawer = 1;
}

message ReadPosCashDrawerRequest {
  string drawer_id = 1;
  JWTPayload jwt_payload = 2;
}

message ReadPosCashDrawerResponse {
  PosCashDrawer pos_cash_drawer = 1;
}

message UpdatePosCashDrawerRequest {
  PosCashDrawer pos_cash_drawer = 1;
  JWTPayload jwt_payload = 2;
}

message UpdatePosCashDrawerResponse {
  PosCashDrawer pos_cash_drawer = 1;
}

message DeletePosCashDrawerRequest {
  string drawer_id = 1;
  JWTPayload jwt_payload = 2;
}

message DeletePosCashDrawerResponse {
  bool success = 1;
}

message ReadAllPosCashDrawersRequest {
    JWTPayload jwt_payload = 1;
}

message ReadAllPosCashDrawersResponse {
  repeated PosCashDrawer pos_cash_drawers = 1;
}

// PosCashDrawerService
service PosCashDrawerService {
  rpc CreatePosCashDrawer(CreatePosCashDrawerRequest) returns (CreatePosCashDrawerResponse);
  rpc ReadPosCashDrawer(ReadPosCashDrawerRequest) returns (ReadPosCashDrawerResponse);
  rpc UpdatePosCashDrawer(UpdatePosCashDrawerRequest) returns (UpdatePosCashDrawerResponse);
  rpc DeletePosCashDrawer(DeletePosCashDrawerRequest) returns (DeletePosCashDrawerResponse);
  rpc ReadAllPosCashDrawers(ReadAllPosCashDrawersRequest) returns (ReadAllPosCashDrawersResponse);
}
